--- a/GamingTimeManager.csproj
+++ b/GamingTimeManager.csproj
@@ -153,6 +153,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Localization\LocSource.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Localization\lt_LT.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
