--- a/GamingTimeManager.csproj
+++ b/GamingTimeManager.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -55,10 +56,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AddonManifest\NMaxCarr_GamingTimeManager.yaml" />
     <None Include="crowdin.yml" />
     <None Include="extension.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="InstallerManifest\NMaxCarr_GamingTimeManager.yaml" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
