--- a/InstallerManifest/NMaxCarr_GamingTimeManager.yaml
+++ b/InstallerManifest/NMaxCarr_GamingTimeManager.yaml
@@ -6,3 +6,9 @@ Packages:
     PackageUrl: https://github.com/NMaxCarr/GamingTimeManager/releases/download/1.0.0/GamingTimeManager_8cb3c9f6-fe18-4f9f-ac4c-dfba4ef46a72_1_0.pext
     Changelog:
       - Initial release
+  - Version: 1.0.1
+    RequiredApiVersion: 6.11.0
+    ReleaseDate: 2024-02-07
+    PackageUrl: https://github.com/NMaxCarr/GamingTimeManager/releases/download/1.0.1/GamingTimeManager_8cb3c9f6-fe18-4f9f-ac4c-dfba4ef46a72_1_0.pext
+    Changelog:
+      - Fix english typo
